Texto Login corregido

--- a/src/login-heineken/login-heineken.html
+++ b/src/login-heineken/login-heineken.html
@@ -113,7 +113,7 @@
                 <paper-button on-tap="_onTapOlvido">¿Has olvidado la contraseña?</paper-button>
             </fieldset>
             <div>
-                <paper-button class="primary" raised on-tap="_onTapLogin">Login</paper-button>
+                <paper-button class="primary" raised on-tap="_onTapLogin">Enviar</paper-button>
             </div>
         </form>
         <hnk-dialog
