--- a/src/ui/hnk-imagen.html
+++ b/src/ui/hnk-imagen.html
@@ -9,11 +9,11 @@
 <link rel="import" href="../iron-icons/image-icons.html">
 
 <link rel="import" href="../util/hnk-base.html">
-<link rel="import" href="../util/shared-styles.html">
+<link rel="import" href="../util/form-styles.html">
 
 <dom-module id="hnk-imagen">
     <template>
-        <style include="shared-styles">
+        <style include="form-styles">
             :host {
                 display: block;
                 padding: 4px;
