--- a/src/login-heineken/login-heineken.html
+++ b/src/login-heineken/login-heineken.html
@@ -100,7 +100,7 @@
             <fieldset>
                 <paper-input
                     name="usr"
-                    label="Usuario"
+                    label="EMail"
                     value="{{usr}}"
                 ></paper-input>
                 <paper-input
@@ -122,7 +122,7 @@
             modal
             on-aceptar="_onAceptarOlvido"
         >
-            Te enviamos una nueva contraseña al email que tenemos registrado para el usuario <b>[[usr]]</b>. Recuerda que podrás cambiarla si lo deseas en "Mi perfil".
+            Te enviamos una nueva contraseña al email <b>[[usr]]</b>. Recuerda que podrás cambiarla si lo deseas en "Mi perfil".
         </hnk-dialog>
     </template>
 
