--- a/src/pages/hnk-encuestador-page.html
+++ b/src/pages/hnk-encuestador-page.html
@@ -68,6 +68,7 @@
                 name="datos"
                 encuestador="{{encuestador}}"
                 mostrar-pwd="[[esMiPerfil]]"
+                mostrar-chk="[[!esMiPerfil]]"
                 cargando="{{_cargando.encuestador}}"
                 on-enviar="_onEnviar"
                 on-pwd="_onTapPwd"
