--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,6 @@
     </style>
   </head>
   <body>
-    <encuestas-heineken-app config-path="config.json"></encuestas-heineken-app>
+    <encuestas-heineken-app config-path="/config"></encuestas-heineken-app>
   </body>
 </html>
